{
  "version": 4,
  "terraform_version": "1.8.0",
  "serial": 50,
  "lineage": "22e4b0cd-ead3-bc69-80b5-caa21376e7d5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "amrit_nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00963767ac7de3028",
            "association_id": "eipassoc-0c272a38f6718a850",
            "domain": "vpc",
            "id": "eipalloc-00963767ac7de3028",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0881ca735813e0edd",
            "private_dns": "ip-10-0-1-143.ap-south-1.compute.internal",
            "private_ip": "10.0.1.143",
            "public_dns": "ec2-3-6-50-212.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.6.50.212",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "amrit_nat_eip"
            },
            "tags_all": {
              "Name": "amrit_nat_eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Amrit_aws_instance_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09298640a92b2d12c",
            "arn": "arn:aws:ec2:ap-south-1:277648487401:instance/i-0a59a40073c4cc2c3",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a59a40073c4cc2c3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "amrit-public",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-094c88f314e9c40ff",
            "private_dns": "ip-10-0-2-31.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.31",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0daa7bd487957128b",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f4d0c1a22287387e",
            "tags": {
              "Name": "Amrit_aws_instance_private"
            },
            "tags_all": {
              "Name": "Amrit_aws_instance_private"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f6d626ba55fb916b"
            ]
          },
          "dependencies": [
            "aws_security_group.amrit_sg",
            "aws_subnet.amrit_private_subnet",
            "aws_vpc.amrit_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Amrit_aws_instance_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09298640a92b2d12c",
            "arn": "arn:aws:ec2:ap-south-1:277648487401:instance/i-0773d606f121d8f6b",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0773d606f121d8f6b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "amrit-public",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a2331ac8a0de5a7b",
            "private_dns": "ip-10-0-1-117.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.117",
            "public_ip": "3.108.184.177",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e285e7565617b09e",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cef203756b011320",
            "tags": {
              "Name": "Amrit_aws_instance_public"
            },
            "tags_all": {
              "Name": "Amrit_aws_instance_public"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f6d626ba55fb916b"
            ]
          },
          "dependencies": [
            "aws_security_group.amrit_sg",
            "aws_subnet.amrit_public_subnet",
            "aws_vpc.amrit_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "amrit_IG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:277648487401:internet-gateway/igw-0578b6d3c698e6b23",
            "id": "igw-0578b6d3c698e6b23",
            "owner_id": "277648487401",
            "tags": {
              "Name": "amrit_IG"
            },
            "tags_all": {
              "Name": "amrit_IG"
            },
            "vpc_id": "vpc-03a33c5408bf1c044"
          },
          "dependencies": [
            "aws_vpc.amrit_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "amrit_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00963767ac7de3028",
            "association_id": "eipassoc-0c272a38f6718a850",
            "connectivity_type": "public",
            "id": "nat-0c8b836054e0a3373",
            "network_interface_id": "eni-0881ca735813e0edd",
            "private_ip": "10.0.1.143",
            "public_ip": "3.6.50.212",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0cef203756b011320",
            "tags": {
              "Name": "amrit_nat_gateway"
            },
            "tags_all": {
              "Name": "amrit_nat_gateway"
            }
          },
          "dependencies": [
            "aws_eip.amrit_nat_eip",
            "aws_subnet.amrit_public_subnet",
            "aws_vpc.amrit_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "amrit_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:277648487401:route-table/rtb-0a3563cb077e70265",
            "id": "rtb-0a3563cb077e70265",
            "owner_id": "277648487401",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c8b836054e0a3373",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "amrit_private_rt"
            },
            "tags_all": {
              "Name": "amrit_private_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-03a33c5408bf1c044"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.amrit_nat_eip",
            "aws_nat_gateway.amrit_nat_gateway",
            "aws_subnet.amrit_public_subnet",
            "aws_vpc.amrit_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "amrit_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:277648487401:route-table/rtb-0fb6025bc58a52d7a",
            "id": "rtb-0fb6025bc58a52d7a",
            "owner_id": "277648487401",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0578b6d3c698e6b23",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "amrit_public_rt"
            },
            "tags_all": {
              "Name": "amrit_public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-03a33c5408bf1c044"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.amrit_IG",
            "aws_vpc.amrit_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "amrit_private_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-065313362460b2ad0",
            "route_table_id": "rtb-0a3563cb077e70265",
            "subnet_id": "subnet-0f4d0c1a22287387e"
          },
          "dependencies": [
            "aws_eip.amrit_nat_eip",
            "aws_nat_gateway.amrit_nat_gateway",
            "aws_route_table.amrit_private_rt",
            "aws_subnet.amrit_private_subnet",
            "aws_subnet.amrit_public_subnet",
            "aws_vpc.amrit_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "amrit_public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e3e8e784362382fa",
            "route_table_id": "rtb-0fb6025bc58a52d7a",
            "subnet_id": "subnet-0cef203756b011320"
          },
          "dependencies": [
            "aws_internet_gateway.amrit_IG",
            "aws_route_table.amrit_public_rt",
            "aws_subnet.amrit_public_subnet",
            "aws_vpc.amrit_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "amrit_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:277648487401:security-group/sg-0f6d626ba55fb916b",
            "description": "Security group for controlling access to EC2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f6d626ba55fb916b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP access from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS access from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "amrit security group",
            "name_prefix": "",
            "owner_id": "277648487401",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "amrit_security_group"
            },
            "tags_all": {
              "Name": "amrit_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-03a33c5408bf1c044"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.amrit_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "amrit_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:277648487401:subnet/subnet-0f4d0c1a22287387e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f4d0c1a22287387e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "277648487401",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "amrit_private_subnet"
            },
            "tags_all": {
              "Name": "amrit_private_subnet"
            },
            "vpc_id": "vpc-03a33c5408bf1c044"
          },
          "dependencies": [
            "aws_vpc.amrit_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "amrit_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:277648487401:subnet/subnet-0cef203756b011320",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cef203756b011320",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "277648487401",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "amrit_public_subnet"
            },
            "tags_all": {
              "Name": "amrit_public_subnet"
            },
            "vpc_id": "vpc-03a33c5408bf1c044"
          },
          "dependencies": [
            "aws_vpc.amrit_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "amrit_VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:277648487401:vpc/vpc-03a33c5408bf1c044",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bb0b718b0b0063ff",
            "default_route_table_id": "rtb-0a47b0b0894778e8f",
            "default_security_group_id": "sg-0725e4552b0a06ad2",
            "dhcp_options_id": "dopt-0244a6f7c5cf1032f",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03a33c5408bf1c044",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a47b0b0894778e8f",
            "owner_id": "277648487401",
            "tags": {
              "Name": "amrit_VPC"
            },
            "tags_all": {
              "Name": "amrit_VPC"
            }
          }
        }
      ]
    }
  ]
}